--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,11 +1,8 @@
-/* Background Color */
-.bg-darkBlue {
-  background-color: hsl(210, 100%, 20%);
-}
-
 /* Nav Bar */
 .navbar {
   padding: 0;
+  background-color: hsl(210, 100%, 20%);
+  font-weight: bolder;
 }
 
 .nav-link {
@@ -17,6 +14,10 @@
 }
 
 /* dropdown-menu */
+.dropdown-menu {
+  background-color: hsl(210, 100%, 20%);
+}
+
 .dropdown-item:hover {
   background-color: hsl(210, 100%, 10%);
 }
