fix navbar button issue

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -13,6 +13,18 @@
   background-color: hsl(210, 100%, 10%);
 }
 
+.navbar__container {
+  flex-direction: column;
+}
+
+.navbar-toggler {
+  align-self: flex-end;
+  color: white;
+  font-size: 5rem;
+  outline: none;
+  box-shadow: none;
+}
+
 /* dropdown-menu */
 .dropdown-menu {
   background-color: hsl(210, 100%, 20%);
