--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -26,7 +26,8 @@
 .footer__item {
   font-size: 1rem;
   display: inline-block;
-  border-right: 1px solid black;
+  border-right: 1px solid hsl(0, 0%, 50%);
+  padding: 0.5rem 1rem;
 }
 
 .footer__item:last-child {
@@ -37,8 +38,6 @@
   cursor: pointer;
   text-decoration: none;
   color: #353535;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 
 .footer__lineBreak,
