Minor Fix on navbar icon and banner image

--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -1,7 +1,8 @@
 .banner {
   align-items: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   height: 100vh;
   justify-content: center;
-  width: 100%;
 }
