--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -15,6 +15,7 @@
 
 .navbar__container {
   flex-direction: column;
+  align-items: flex-end !important;
 }
 
 .navbar-toggler {
@@ -25,6 +26,11 @@
   box-shadow: none;
 }
 
+@media screen and (max-width: 768px) {
+  .navbar-collapse {
+    align-self: flex-start;
+  }
+}
 /* dropdown-menu */
 .dropdown-menu {
   background-color: hsl(210, 100%, 20%);
