--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
+@import url("styles/typograhpy.css");
+
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 10px;
 }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
