--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,41 +1,91 @@
-/* Nav Bar */
 .navbar {
-  padding: 0;
+  align-items: center;
   background-color: hsl(210, 100%, 20%);
+  display: flex;
   font-weight: bolder;
+  justify-content: space-between;
+  padding: 0;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  user-select: none;
+  z-index: 1;
 }
 
-.nav-link {
-  color: white !important;
+.navbar__header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
 }
 
-.nav-link:hover {
-  background-color: hsl(210, 100%, 10%);
+.navbar__toggler {
+  margin: 1rem;
+  display: none;
 }
 
-.navbar__container {
-  flex-direction: column;
-  align-items: flex-end !important;
+.navbar__brand {
+  font-size: 20px;
+  margin: 1rem 2rem;
 }
 
-.navbar-toggler {
-  align-self: flex-end;
+.navbar__brand i {
   color: white;
-  font-size: 5rem;
-  outline: none;
-  box-shadow: none;
 }
 
-@media screen and (max-width: 768px) {
-  .navbar-collapse {
-    align-self: flex-start;
+.navbar__list {
+  margin: 0;
+  padding: 0;
+}
+
+.navbar__listItem {
+  display: inline-block;
+  font-size: 1.5rem;
+  list-style: none;
+  margin: 0 1rem;
+}
+
+.navbar__listItem .navbar__link {
+  color: white;
+  text-decoration: none;
+}
+
+@media screen and (max-width: 1024px) {
+  .navbar {
+    flex-direction: column;
   }
-}
-/* dropdown-menu */
-.dropdown-menu {
-  background-color: hsl(210, 100%, 20%);
-}
 
-.dropdown-item:hover {
-  background-color: hsl(210, 100%, 10%);
+  .navbar__header {
+    width: 100%;
+  }
+
+  .navbar__toggler {
+    display: inline-block;
+  }
+
+  .navbar__body {
+    align-self: flex-start;
+    margin: 0 2rem;
+    overflow: hidden;
+    text-align: left;
+  }
+
+  .navbar__body--expanded .navbar__list {
+    max-height: 100%;
+    opacity: 1;
+  }
+
+  .navbar__list {
+    display: flex;
+    flex-direction: column;
+    max-height: 0;
+    opacity: 0;
+    overflow: hidden;
+    transition: all 0.3s;
+  }
+
+  .navbar__listItem {
+    margin-left: 0;
+    margin-bottom: 0.5rem;
+  }
 }
