--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -1,10 +1,16 @@
+.image {
+  width: 100%;
+  object-fit: contain;
+}
+
 .imageContianer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 1rem;
 }
 
-.image {
-  width: 100%;
-  object-fit: contain;
+.imageContianer__loader,
+.imageContianer__endMessage {
+  text-align: center;
+  grid-column: 1 / -1;
 }
