--- a/src/styles/_tagline.scss
+++ b/src/styles/_tagline.scss
@@ -1,6 +1,6 @@
 .tagline {
   align-items: center;
-  color: white;
+  color: $color-primary;
   display: flex;
   flex-direction: column;
   text-align: center;
