--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,19 +1,24 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:400");
-
-html {
-  font-size: 62.5%;
-} /*10px*/
-
-body {
-  background: white;
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  line-height: 1.75;
-  color: #000000;
+* {
+  box-sizing: border-box;
 }
 
-p {
-  margin-bottom: 1rem;
+html {
+  font-size: 10px;
+}
+
+body {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 400;
+  line-height: 1.75;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 h1,
@@ -46,6 +51,10 @@ h4 {
 
 h5 {
   font-size: 1.5rem;
+}
+
+p {
+  margin-bottom: 1rem;
 }
 
 small,
